Add attributes support to Admin
